Fix: Buttons in a collection with Bootstrap 4 could overflow
Similar to https://github.com/DataTables/Buttons/commit/4c7ccd202124e6e30497a529a537290ca1874c50

--- a/css/buttons.bootstrap4.scss
+++ b/css/buttons.bootstrap4.scss
@@ -12,7 +12,7 @@ div.dt-button-collection {
 	border-radius: 4px;
 	box-shadow: 0 6px 12px rgba(0,0,0,.175);
 	padding: 0.5rem;
-	width: 200px;
+	width: 218px;
 
 	div.dropdown-menu {
 		position: relative;
